# v2a_inspect

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  test_music.py
src/v2a_inspect/: cli.py  runner.py  settings.py
src/v2a_inspect/clients/: __init__.py  audio.py  video.py
src/v2a_inspect/pipeline/nodes/: __init__.py  _shared.py  analyze.py  assemble.py  evaluate.py  extract.py  generate_audio.py  group.py  intent.py  mix_video.py  plan.py  refine.py  relation.py  select_model.py  verify.py
src/v2a_inspect/pipeline/prompt_templates/: __init__.py  provider.py  utils.py
src/v2a_inspect/pipeline/prompt_templates/prompts/system/: analyze_global.txt  analyze_local.txt  intent.txt  plan.txt  relation.txt
src/v2a_inspect/pipeline/prompt_templates/prompts/user/: analyze_global.txt  analyze_local.txt  grouping.txt  intent.txt  plan.txt  relation.txt
src/v2a_inspect/pipeline/response_models/: __init__.py  plan.py  scenes.py  tracks.py
src/v2a_inspect/tools/: generate_report.py
src/v2a_inspect/tools/templates/: index.html.jinja2  per_video.html.jinja2
src/v2a_inspect/ui/: app.py  auth.py  render.py  session.py  video.py
src/v2a_inspect/workflows/: inspect_graph.py  state.py
