[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["v2a_inspect"]
module-root = "src"

[tool.uv-build]
include = ["src/v2a_inspect/pipeline/prompt_templates/prompts/**/*.txt"]

[project]
name = "v2a-inspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.68.0",
    "langchain>=1.2.12",
    "langfuse>=3.9.0",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.1.2",
    "moviepy>=2.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.55.0",
    "streamlit-authenticator>=0.4.2",
    "scipy>=1.17.1",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "requests>=2.32.5",
    "elevenlabs>=2.40.0",
]

[project.scripts]
v2a-inspect = "v2a_inspect.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]
